# sidhant-experiments

./: .dockerignore  .gitignore  .temporal.db-journal  conflict-resolution.md  pyproject.toml  run_vfx.sh  test_color_debug.py  test_compose_color.py
cv_experiments/: MODAL_DEPLOYMENT.md  YouTube Zoom Effects - youtube_zoom_effects_sheet.csv.csv  modal_config.py  modal_prod.py  modal_use.py  opt.py  opte.py  selfie_seg.py  zoom_bounce.py  zoom_bounce_gpu.py  zoom_bounce_nuclear.py  zoom_bounce_test_runner.py  zoom_follow_effect.md  zoom_text.py
data/: template_library.json
sidhant_experiments.egg-info/: PKG-INFO
video_effects/: .dockerignore  .env.example  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  STYLE.md  __main__.py  api.py  cli.py  config.py  creative_workflow.py  docker-compose.yml  effect_registry.py  infographic_workflow.py  programmer_workflow.py  test_sam.py  web.py  web_helpers.py  webhook_server.py  worker.py  workflow.py
video_effects/activities/: __init__.py  apply_effects.py  compose.py  creative.py  infographic.py  parse_cues.py  programmer.py  remotion.py  segmentation.py  transcribe.py  validate.py  video.py
video_effects/app/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
video_effects/core/: __init__.py
video_effects/data/: template_library.json
video_effects/docs/: README.md  architecture.md  cli-and-config.md  concurrency-and-deployment.md  face-tracking.md  features.md  infographics.md  llm-prompts.md  motion-graphics.md  remotion-components.md  styles.md
(+167 files in other folders)
