[project]
name = "sidhant-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "modal>=1.3.3",
    "temporalio>=1.21.1",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "opencv-python>=4.13.0.92",
    "mediapipe>=0.10.32",
    "numpy>=1.26.0",
]
